[project]
name = "b2b-lead-qualification-voice-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-google-genai>=3.1.0",
    "langgraph>=1.0.3",
    "livekit-agents[aws,deepgram,langchain,silero]>=1.3.3",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
]
